# Soda

./: .clang-format  .gitignore  .gitmodules  LICENSE  Makefile  Makefile.am  README.md  Soda.pro  Soda.sln  TODO.txt  autogen.sh  configure.ac  demo.soda
Scripts/: gengrammar.py  reformat.sh
Soda/: Ast.h  CCode.h  CCodeTreeGen.cpp  CCodeTreeGen.h  CCodeVisitor.cpp  CodeGen.cpp  Compiler.cpp  Compiler.h  DotGenerator.cpp  DotGenerator.h  LLVM.h  Logger.h  Main.cpp  Makefile  Makefile.am  NameMangler.cpp  NameMangler.h  Operators.cpp  Operators.h  Options.cpp  Options.h  Parser.cpp  Parser.h  Platform.h  ScopeBuilder.cpp  ScopeBuilder.h  ScopeVisitor.h  Sema.cpp  Sema.h  Soda.h  Soda.vcxproj  Soda.vcxproj.filters  SourceFile.cpp  SourceFile.h  Symbol.cpp  Symbol.h  SymbolResolver.cpp  SymbolResolver.h  SymbolTable.cpp  SymbolTable.h  (+7 more)
m4/: ax_llvm.m4  ax_platform.m4
src/: ast.cpp  ast.hpp  main.cpp  operators.cpp  operators.hpp  parse_error.hpp  soda.hpp  source_range.hpp  tokenizer.cpp  tokenizer.hpp  utils.cpp  utils.hpp
tests/: test.soda
